patient-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: NodePort
  selector:
    app: patient-service
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
